reduce to an empty collection works SERVER-2272